// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cluster order of sidebar items given core registrations when rendered renders 1`] = `
<div>
  <div
    class="flex flex-col"
    data-testid="cluster-sidebar"
  >
    <div>
      <div
        class=""
        style="width: 40px; height: 40px;"
      >
        ??
      </div>
      <div />
    </div>
    <div>
      <div
        class="SidebarItem"
        data-id-test="cluster-overview"
        data-is-active-test="false"
        data-test-id="cluster-overview"
        data-testid="sidebar-item"
        data-title-test="Cluster"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-cluster-overview"
          href="/"
        >
          <i
            class="Icon svg focusable"
          >
            <span
              class="icon"
            >
              [object Object]
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Cluster
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="nodes"
        data-is-active-test="false"
        data-test-id="nodes"
        data-testid="sidebar-item"
        data-title-test="Nodes"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-nodes"
          href="/"
        >
          <i
            class="Icon svg focusable"
          >
            <span
              class="icon"
            >
              [object Object]
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Nodes
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="workloads"
        data-is-active-test="false"
        data-test-id="workloads"
        data-testid="sidebar-item"
        data-title-test="Workloads"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-workloads"
          href="/"
        >
          <i
            class="Icon svg focusable"
          >
            <span
              class="icon"
            >
              [object Object]
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Workloads
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="config"
        data-is-active-test="false"
        data-test-id="config"
        data-testid="sidebar-item"
        data-title-test="Config"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-config"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="list"
            >
              list
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Config
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="some-parent-id"
        data-is-active-test="false"
        data-test-id="some-parent-id"
        data-testid="sidebar-item"
        data-title-test="A Some parent"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-some-parent-id"
          href="/"
        >
          <span
            class="link-text box grow"
          >
            A Some parent
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="network"
        data-is-active-test="false"
        data-test-id="network"
        data-testid="sidebar-item"
        data-title-test="Network"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-network"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="device_hub"
            >
              device_hub
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Network
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="storage"
        data-is-active-test="false"
        data-test-id="storage"
        data-testid="sidebar-item"
        data-title-test="Storage"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-storage"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="storage"
            >
              storage
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Storage
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="namespaces"
        data-is-active-test="false"
        data-test-id="namespaces"
        data-testid="sidebar-item"
        data-title-test="Namespaces"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-namespaces"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="layers"
            >
              layers
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Namespaces
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="events"
        data-is-active-test="false"
        data-test-id="events"
        data-testid="sidebar-item"
        data-title-test="Events"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-events"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="access_time"
            >
              access_time
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Events
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="some-another-parent-id"
        data-is-active-test="false"
        data-test-id="some-another-parent-id"
        data-testid="sidebar-item"
        data-title-test="b Some another parent"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-some-another-parent-id"
          href="/"
        >
          <span
            class="link-text box grow"
          >
            b Some another parent
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="some-other-parent-id"
        data-is-active-test="false"
        data-test-id="some-other-parent-id"
        data-testid="sidebar-item"
        data-title-test="C Some other parent"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-some-other-parent-id"
          href="/"
        >
          <span
            class="link-text box grow"
          >
            C Some other parent
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="helm"
        data-is-active-test="false"
        data-test-id="helm"
        data-testid="sidebar-item"
        data-title-test="Helm"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-helm"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="apps"
            >
              apps
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Helm
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="user-management"
        data-is-active-test="false"
        data-test-id="user-management"
        data-testid="sidebar-item"
        data-title-test="Access Control"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-user-management"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="security"
            >
              security
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Access Control
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="custom-resources"
        data-is-active-test="false"
        data-test-id="custom-resources"
        data-testid="sidebar-item"
        data-title-test="Custom Resources"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-custom-resources"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="extension"
            >
              extension
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Custom Resources
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`cluster order of sidebar items given core registrations when rendered when parent is expanded renders 1`] = `
<div>
  <div
    class="flex flex-col"
    data-testid="cluster-sidebar"
  >
    <div>
      <div
        class=""
        style="width: 40px; height: 40px;"
      >
        ??
      </div>
      <div />
    </div>
    <div>
      <div
        class="SidebarItem"
        data-id-test="cluster-overview"
        data-is-active-test="false"
        data-test-id="cluster-overview"
        data-testid="sidebar-item"
        data-title-test="Cluster"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-cluster-overview"
          href="/"
        >
          <i
            class="Icon svg focusable"
          >
            <span
              class="icon"
            >
              [object Object]
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Cluster
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="nodes"
        data-is-active-test="false"
        data-test-id="nodes"
        data-testid="sidebar-item"
        data-title-test="Nodes"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-nodes"
          href="/"
        >
          <i
            class="Icon svg focusable"
          >
            <span
              class="icon"
            >
              [object Object]
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Nodes
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="workloads"
        data-is-active-test="false"
        data-test-id="workloads"
        data-testid="sidebar-item"
        data-title-test="Workloads"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-workloads"
          href="/"
        >
          <i
            class="Icon svg focusable"
          >
            <span
              class="icon"
            >
              [object Object]
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Workloads
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="config"
        data-is-active-test="false"
        data-test-id="config"
        data-testid="sidebar-item"
        data-title-test="Config"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-config"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="list"
            >
              list
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Config
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="some-parent-id"
        data-is-active-test="false"
        data-test-id="some-parent-id"
        data-testid="sidebar-item"
        data-title-test="A Some parent"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-some-parent-id"
          href="/"
        >
          <span
            class="link-text box grow"
          >
            A Some parent
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_up"
            >
              keyboard_arrow_up
            </span>
          </i>
        </a>
        <ul
          class="sub-menu"
        >
          <div
            class="SidebarItem"
            data-id-test="some-child-id"
            data-is-active-test="false"
            data-parent-id-test="some-parent-id"
            data-test-id="some-child-id"
            data-testid="sidebar-item"
            data-title-test="A Some child"
          >
            <a
              class="nav-item flex gaps align-center"
              data-testid="sidebar-item-link-for-some-child-id"
              href="/"
            >
              <span
                class="link-text box grow"
              >
                A Some child
              </span>
            </a>
          </div>
          <div
            class="SidebarItem"
            data-id-test="some-another-child-id"
            data-is-active-test="false"
            data-parent-id-test="some-parent-id"
            data-test-id="some-another-child-id"
            data-testid="sidebar-item"
            data-title-test="b Some another child"
          >
            <a
              class="nav-item flex gaps align-center"
              data-testid="sidebar-item-link-for-some-another-child-id"
              href="/"
            >
              <span
                class="link-text box grow"
              >
                b Some another child
              </span>
            </a>
          </div>
          <div
            class="SidebarItem"
            data-id-test="some-other-child-id"
            data-is-active-test="false"
            data-parent-id-test="some-parent-id"
            data-test-id="some-other-child-id"
            data-testid="sidebar-item"
            data-title-test="C Some other child"
          >
            <a
              class="nav-item flex gaps align-center"
              data-testid="sidebar-item-link-for-some-other-child-id"
              href="/"
            >
              <span
                class="link-text box grow"
              >
                C Some other child
              </span>
            </a>
          </div>
        </ul>
      </div>
      <div
        class="SidebarItem"
        data-id-test="network"
        data-is-active-test="false"
        data-test-id="network"
        data-testid="sidebar-item"
        data-title-test="Network"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-network"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="device_hub"
            >
              device_hub
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Network
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="storage"
        data-is-active-test="false"
        data-test-id="storage"
        data-testid="sidebar-item"
        data-title-test="Storage"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-storage"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="storage"
            >
              storage
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Storage
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="namespaces"
        data-is-active-test="false"
        data-test-id="namespaces"
        data-testid="sidebar-item"
        data-title-test="Namespaces"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-namespaces"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="layers"
            >
              layers
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Namespaces
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="events"
        data-is-active-test="false"
        data-test-id="events"
        data-testid="sidebar-item"
        data-title-test="Events"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-events"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="access_time"
            >
              access_time
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Events
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="some-another-parent-id"
        data-is-active-test="false"
        data-test-id="some-another-parent-id"
        data-testid="sidebar-item"
        data-title-test="b Some another parent"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-some-another-parent-id"
          href="/"
        >
          <span
            class="link-text box grow"
          >
            b Some another parent
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="some-other-parent-id"
        data-is-active-test="false"
        data-test-id="some-other-parent-id"
        data-testid="sidebar-item"
        data-title-test="C Some other parent"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-some-other-parent-id"
          href="/"
        >
          <span
            class="link-text box grow"
          >
            C Some other parent
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="helm"
        data-is-active-test="false"
        data-test-id="helm"
        data-testid="sidebar-item"
        data-title-test="Helm"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-helm"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="apps"
            >
              apps
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Helm
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="user-management"
        data-is-active-test="false"
        data-test-id="user-management"
        data-testid="sidebar-item"
        data-title-test="Access Control"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-user-management"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="security"
            >
              security
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Access Control
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-id-test="custom-resources"
        data-is-active-test="false"
        data-test-id="custom-resources"
        data-testid="sidebar-item"
        data-title-test="Custom Resources"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-custom-resources"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="extension"
            >
              extension
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Custom Resources
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
    </div>
  </div>
</div>
`;
